--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">HolaMundo</string>
     <string name="Titulo">Aplicacion para saludar</string>
     <string name="Saludar">Saludar</string>
+    <string name="parte_saludo">Saludar</string>
 </resources>
